--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,23 +22,35 @@ concurrency:
 
 jobs:
   build-test:
-    runs-on: ubuntu-latest
+    name: "Build & Test (${{ matrix.os }}, JDK ${{ matrix.java }})"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        java: [17, 21]
+        exclude:
+          - os: windows-latest
+            java: 21
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Set up Temurin ${{ matrix.java }}
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: ${{ matrix.java }}
           cache: maven
 
       - name: Build & Test
         run: mvn -B -DskipTests=false test
 
-      - name: Upload test reports
+      - name: Upload Surefire reports (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: surefire-reports
+          name: surefire-${{ matrix.os }}-jdk${{ matrix.java }}
           path: target/surefire-reports
+          if-no-files-found: warn
+          retention-days: 7
