--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
     <maven.compiler.target>17</maven.compiler.target>
     <junit.jupiter.version>5.10.2</junit.jupiter.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.projectKey>Moritz311_ci-cd-uebung-Schuetz</sonar.projectKey>
+    <sonar.organization>moritz311</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
   <dependencies>
     <!-- JUnit 5 API -->
