--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,3 +74,45 @@ jobs:
         run: |
           mvn -B -DskipTests=false verify sonar:sonar \
             -Dsonar.login=${SONAR_TOKEN}
+  docker:
+    name: "Docker build & .tar"
+    runs-on: ubuntu-latest
+    needs: [ build-test ]
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Short SHA
+        id: meta
+        run: echo "sha_short=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build image (single-arch) & load
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64
+          load: true
+          tags: local/app:${{ steps.meta.outputs.sha_short }}
+          provenance: false
+
+      - name: Save image as .tar
+        run: |
+          mkdir -p artifacts
+          docker save local/app:${{ steps.meta.outputs.sha_short }} \
+            -o artifacts/docker-image-${{ steps.meta.outputs.sha_short }}.tar
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image-${{ steps.meta.outputs.sha_short }}
+          path: artifacts/docker-image-${{ steps.meta.outputs.sha_short }}.tar
+          if-no-files-found: error
+
