--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,4 +115,45 @@ jobs:
           name: docker-image-${{ steps.meta.outputs.sha_short }}
           path: artifacts/docker-image-${{ steps.meta.outputs.sha_short }}.tar
           if-no-files-found: error
+  grype-scan:
+    name: "Grype scan"
+    runs-on: ubuntu-latest
+    needs: [ docker ]
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Short SHA
+        id: meta
+        run: echo "sha_short=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
+
+      - name: Download Docker image artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docker-image-${{ steps.meta.outputs.sha_short }}
+          path: artifacts
+
+      - name: Load Docker image
+        run: |
+          docker load -i artifacts/docker-image-${{ steps.meta.outputs.sha_short }}.tar
+
+      - name: Install Grype
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | \
+            sh -s -- -b /usr/local/bin
+
+      - name: Run Grype scan (JSON)
+        run: |
+          grype docker:local/app:${{ steps.meta.outputs.sha_short }} \
+            -o json > grype-report.json
+
+      - name: Upload Grype report
+        uses: actions/upload-artifact@v4
+        with:
+          name: grype-report-${{ steps.meta.outputs.sha_short }}
+          path: grype-report.json
+          if-no-files-found: error
+          retention-days: 7
 
